# typle

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: check.txt  constant.rs  context.rs  iterator.rs  lib.rs  specific.rs  syn_ext.rs
src/context/: expr.rs  generic_param.rs  pat.rs  shared.rs  type.rs
tests/: test.rs
tests/compile/: conditional.rs  const_generic.rs  doc-typle.expanded.rs  doc-typle.rs  doc_typle.rs  for-loop.expanded.rs  for_loop.rs  function.expanded.rs  function.rs  get.rs  issue1.rs  macros.rs  method.rs  mod.expanded.rs  mod.rs  pattern.rs  readme.expanded.rs  readme.rs  spread.rs  type-alias.expanded.rs  type_alias.rs  typle_args.rs  typle_fold.rs  unzip.rs
tests/expand/: doc-typle.expanded.rs  doc-typle.rs  enum.expanded.rs  enum.rs  for-loop.expanded.rs  for-loop.rs  hash.expanded.rs  hash.rs  readme.expanded.rs  readme.rs  struct.expanded.rs  struct.rs  type-alias.expanded.rs  type-alias.rs  typle-expand.expanded.rs  typle-expand.rs  typle-for.expanded.rs  typle-for.rs  where.expanded.rs  where.rs
