[package]
name = "typle"
version = "0.9.11"
edition = "2021"
description = "Generic tuple bounds and transformations"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["tuple", "metaprogramming", "variadic"]
repository = "https://github.com/jongiddy/typle"
rust-version = "1.65"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.43", features = ["full", "visit-mut", "extra-traits"] }

[dev-dependencies]
macrotest = "1"
