[package]
name = "typle"
version = "0.11.0"
edition = "2021"
description = "Generic tuple bounds and transformations"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["tuple", "metaprogramming", "variadic"]
repository = "https://github.com/jongiddy/typle"
rust-version = "1.68.2"

[lib]
proc-macro = true

[dependencies]
either = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.43", features = ["full", "extra-traits"] }
zip_clone = "0.1.0"

[dev-dependencies]
macrotest = "1"
